# FitLife

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  README2.md  drawSQL-pgsql-export-2024-03-21.sql  jsconfig.json  makefile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  todo.md
app/core/: admin.py  fields.py  forms.py  formsmixins.py  middlewares.py  models.py  protocols.py  repositories.py  transfer.py  urls.py  views.py  viewsmixins.py
app/gym/: admin.py  apps.py  forms.py  models.py  presenters.py  types.py  urls.py  views.py
app/users/: forms.py  managers.py  models.py  transfer.py  urls.py  utils.py  views.py
apps/core/: constants.py  exceptions.py  form_fields.py  forms.py  models.py  querysets.py  selectors.py  typed.py  ui.py  utils.py  views.py  viewsmixins.py
apps/gym/: admin.py  dtos.py  forms.py  models.py  selectors.py  services.py  typed.py  ui.py  urls.py  validators.py  views.py
apps/organizations/: forms.py  models.py  services.py
apps/users/: admin.py  forms.py  managers.py  models.py  services.py  urls.py  utils.py  views.py
config/: settings.py  urls.py  wsgi.py
config/settings/: dev.py  prod.py
dockerfiles/: Dockerfile.db.dev
docs/: Exercises.json  MuscleGroups.json  corrected_exercise_list_with_translation.json  equipments.json  equipments_data.json  exercises.html  exercises.json  exercises_2.json  final_corrected_exercise_list.json  muscles.json  translated_exercise_list.json  translated_exercise_list_with_description.json  translated_exercise_list_with_description_fixed.json
playground/: load_exercises.ipynb  nested_validation_error.ipynb  new_validation_error.ipynb  selectors.ipynb
sandbox/: http_method_handler.ipynb  models.ipynb
src/core/: form_fields.py  forms.py  models.py  querysets.py  typed.py  utils.py  views.py  viewsmixins.py
src/gym/: apps.py  forms.py  models.py  selectors.py  services.py  typed.py  views.py
src/users/: admin.py  forms.py  managers.py  models.py  services.py  urls.py  utils.py  views.py
static/css/: main.css  main.less  navbar.less  sidebar.less
static/js/: main.js
static_root/: staticfiles.json
static_root/css/: main.2353e0a0fc1f.less  navbar.f71922dd904d.less  sidebar.cdca7c837af1.less
templates/components/: close_button.html  create_update_workout.html  error_alert.html  exercise_form_card.html  exercise_select_button.html  (+13 more)
tests/: conftest.py  test_factories.py
(+232 files in other folders)
